Work on new effort grouping: LME/EEZ + FAO for open ocean

--- a/Script/02_merge_effort_spatial_data.Rmd
+++ b/Script/02_merge_effort_spatial_data.Rmd
@@ -52,9 +52,8 @@ nrow(EEZ_tot) # 193
 
 head(EEZ) # CN - might need to change aggregation levels - use the FAOname as the  Admin_Country aggregates EEZ that are under the same administrative country. 
 unique(EEZ[,c("CNumber", "FAOname", "A_Code", "Admin_Country")])
-# View(unique(EEZ[,c("CNumber", "FAOname")]))
-length(unique(EEZ$CNumber)) ## WARNING - should we consider both CNumber and FAOname or only FAOname?? are they the same? 
-length(unique(EEZ$FAOname))
+# View(unique(EEZ[,c("CNumber", "FAOname")])) # unique CNubmer and FAOName
+# View(unique(EEZ[,c("A_Code", "FAOname")])) # repeated A_Code for some FAOname (I guess under the same Admin_country)
 
 (EEZ_adj <- bind_rows(EEZ %>% 
             filter(DISPUTED == FALSE),
@@ -78,6 +77,12 @@ EEZ_adj <- lazy_dt(EEZ_adj)
 EEZ_xyz <- EEZ_adj %>% as_tibble() %>%  rename(x=Lon, y= Lat, z=eez_country_code) %>%  select(x,y,z) 
 EEZ_raster <- raster::rasterFromXYZ(EEZ_xyz)
 plot(EEZ_raster)
+
+
+EEZ_adj<-EEZ_adj %>% select(-eez_country_code) # CN no need for this enymore - avod confuction
+nrow(as.data.table(EEZ_adj))
+EEZ_adj<-unique(EEZ_adj)
+nrow(as.data.table(EEZ_adj))
 
 # ggplot(data = EEZ_xyz)+
 #   geom_tile(aes(x=x, y=y, fill=z)) + 
@@ -113,13 +118,13 @@ nrow(FAO_regions) #229369
 #Some LME data are around that have no FAO or EEZ data
 (all_spatial_layers <- 
   full_join(x = full_join(x = LMEs %>% select(-Seq), y = FAO_regions, by = c("Lon", "Lat")), 
-            y = EEZ_adj %>% select(Lon, Lat, eez_country_code, eez_country_name), by = c("Lon", "Lat")) %>% as_tibble()
+            y = EEZ_adj %>% select(Lon, Lat, eez_country_name), by = c("Lon", "Lat")) %>% as_tibble()
 )
 
 missing_fao_eez <- 
   all_spatial_layers %>% 
   filter(is.na(fao_area)) %>% #29831 where FAO areas are NA but LME are not
-  filter(is.na(eez_country_code)) #29830 where EEZ are NA but LME are not - this does not change depending on order. So there is one cell where the is LME data and EEZ data but not FAO area data
+  filter(is.na(eez_country_name)) #29830 where EEZ are NA but LME are not - this does not change depending on order. So there is one cell where the is LME data and EEZ data but not FAO area data
 
 # Camilla's CHECKS
 nrow(missing_fao_eez) # 29830 - is this land, which is given as 0 for LMEs instead of NAs?
@@ -145,7 +150,7 @@ plot(trial2_raster)
 # why so many NAs for EEZ? 
 missing_eez <- 
   all_spatial_layers %>% 
-  filter(is.na(eez_country_code)) 
+  filter(is.na(eez_country_name)) 
 nrow(missing_eez) # 79296
 missing_eez2<-missing_eez %>% 
   filter(LME != 0) # remove LME 0 and EEZ NAs which could be land and open ocean 
@@ -165,7 +170,7 @@ missing_eez3<-missing_eez2 %>%
 trial<-as.data.table(select(missing_eez3, "Lon", "Lat", "LME"))
 trial_raster<-rasterFromXYZ(trial)
 plot(trial_raster)
-dev.off()
+
 # could be land discrepancy: 
 # 1 yes
 # 56 could be? 
@@ -394,83 +399,12 @@ Not needed see reason above
 
 ```
 
-# Make a function that will speedily import and merge the data files
+# Run function to aggregate data on all 30,000 files and write them to folder
 
 ```{r}
 
-join_effort_data <- function(this_file_name){
-  
-  # trial 
-  # this_file_name = "mapped_1952_I_678.csv"
-  
-  this_source_path <- file.path("/rd/gem/private/users/yannickr/effort_mapped_bycountry", this_file_name)
-  
-  # this_destination_path <- paste0("/rd/gem/private/users/yannickr/effort_mapped_by_country_aggregated/", "aggregated_", this_file_name) 
-  # CN this version consideres EEZ aggregation using EEZ FAOname instead of the administrative country name. 
-  this_destination_path <- paste0("/rd/gem/private/users/yannickr/effort_mapped_by_country_aggregated_EEZ/", "aggregated_EEZ_", this_file_name)
-  # CN this version considers EEZ aggregation using EEZ FAOname instead of the administrative country name (Yannick's file) and intersection between LME and FAO regions to split the high seas. NO NEED AS the original code already does this
-  # this_destination_path <- paste0("/rd/gem/private/users/yannickr/effort_mapped_by_country_aggregated_HighSea/", "aggregated_HighSea_", this_file_name)
-  
-  # if(file.exists(this_destination_path)){ # CN - why this? the file does not exist
-    
-    Year <- as.numeric(str_extract(this_file_name, pattern =  "([[:digit:]])+"))
-    
-    these_data <- fread(this_source_path)
-    these_data <- lazy_dt(these_data)
-    
-    #data.table approach
-    #tells data.table how to join
-    # 
-    # setkey(these_data, Lon, Lat)
-    # setkey(LMEs, Lon, Lat)
-    # setkey(EEZ_adj, Lon, Lat)
-    # setkey(FAO_regions, Lon, Lat)
-    # 
-    # #make the joins of LMEs, FAO areas, and EEZs
-    # merge_1 <- LMEs[these_data, on = c("Lon", "Lat")]
-    # merge_2 <- FAO_regions[merge_1, on = c("Lon", "Lat")]
-    # merge_3 <- EEZ_adj[merge_2, on = c("Lon", "Lat")] #merge 3 has retained the same number of rows
-    # #group by all variables and sum the different effort forms, adding year at the end
-    # 
-    # this_aggregated_data <- 
-    #   cbind(
-    #     nom_active_gr <- merge_3[, .(NomActive= sum(NomActive, na.rm = TRUE)),
-    #                              by = list(eez_country_name, fao_area, LME, SAUP, Gear, FGroup, Sector )][,"NomActive"],
-    #     eff_active_gr <-  merge_3[, .(EffActive= sum(EffActive, na.rm = TRUE)), 
-    #                               by = list(eez_country_name, fao_area, LME, SAUP, Gear, FGroup, Sector )][,"EffActive"],
-    #     nv_gr <- merge_3[, .(NV= sum(NV, na.rm = TRUE)),
-    #                      by = list(eez_country_name, fao_area, LME, SAUP, Gear, FGroup, Sector )][,"NV"],
-    #     p_gr <- merge_3[, .(P= sum(P, na.rm = TRUE)), 
-    #                     by = list(eez_country_name, fao_area, LME, SAUP, Gear, FGroup, Sector )][,"P"],
-    #     gt_group <- merge_3[, .(GT= sum(GT, na.rm = TRUE)), 
-    #                         by = list(eez_country_name, fao_area, LME, SAUP, Gear, FGroup, Sector )][,"GT"]
-    #   )[, `:=`(Year = Year)]
-    
-    # dtplyr approach
-    these_aggregated_data <-
-      these_data %>%
-      left_join(LMEs, by=c("Lat", "Lon")) %>%
-      left_join(EEZ_adj, by=c("Lat", "Lon")) %>%
-      left_join(FAO_regions, by=c("Lat", "Lon")) %>%
-      # left_join(FAO_LME_new, by = c("Lat", "Lon")) %>% # CN added no need
-      group_by(eez_country_name, fao_area, LME, LME_FAO, SAUP, Gear, FGroup, Sector) %>%
-      summarise(NomActive = sum(NomActive, na.rm = TRUE),
-                EffActive = sum(EffActive, na.rm = TRUE),
-                NV= sum(NV, na.rm = TRUE),
-                P= sum(P, na.rm = TRUE),
-                GT= sum(GT, na.rm = TRUE)) %>%
-      mutate(Year = Year) %>% as.data.table()
-    
-    fwrite(x = these_aggregated_data, file = file.path(this_destination_path))
-  # }
-  
-}
+source("Script/Helper_functions_fishingEffort.R")
 
-```
-
-Run the code on all 30,000 files and write them to folder
-
-```{r}
 
 #compressed_effort_files <- list.files(file.path(compressed_effort_dir), full.names = TRUE)
 original_effort_files <- list.files(file.path(original_effort_dir), pattern = ".csv")
@@ -494,23 +428,23 @@ toc()
 
 ```
 
-Check the files
+# Check the files
 
 ```{r}
+
+
 #check the files
 # newly_written_files <- list.files(file.path(yannick_dir, "effort_mapped_by_country_aggregated"), full.names = TRUE)
 
 # # CN consider the EEZ version as explained above 
 newly_written_files <- list.files(file.path(yannick_dir, "effort_mapped_by_country_aggregated_EEZ"), full.names = TRUE)
 
-# CN consider the HighSea version as explained above - no need
-# newly_written_files <- list.files(file.path(yannick_dir, "effort_mapped_by_country_aggregated_HighSea"), full.names = TRUE)
-
 #pick one randomly 
 map(newly_written_files[[8]], fread)
 ```
 
-Combine all listed files to one file
+# Combine all listed files to one file
+
 ```{r}
 
 combined_aggregated_effort <- rbindlist(mclapply(X = newly_written_files, FUN = fread, mc.cores = 40))
@@ -519,9 +453,6 @@ combined_aggregated_effort <- rbindlist(mclapply(X = newly_written_files, FUN = 
 
 # CN consider the EEZ version as explained above
 fwrite(x = combined_aggregated_effort, file.path(yannick_dir, "all_effort_aggregated_EEZ.csv"))
-
-# # CN consider the HighSea version as explained above 
-# fwrite(x = combined_aggregated_effort, file.path(yannick_dir, "all_effort_aggregated_HighSea.csv"))
 
 ```
 
