--- a/Script/07_Extrapolation_forSpinUP.Rmd
+++ b/Script/07_Extrapolation_forSpinUP.Rmd
@@ -14,6 +14,8 @@ editor_options:
 knitr::opts_chunk$set(warning = FALSE, message=FALSE)
 ```
 
+## AIM 
+
 The **AIM** of this file is to extrapolate fishing effort between 1850 and 1950 for model spin up.  
 
 The **METHOD** follows two steps:   
@@ -85,7 +87,8 @@ select<-dplyr::select
 
 # effort<-read_csv("/rd/gem/private/users/yannickr/effort_histsoc_1950_2017.csv")
 # consider new aggregation using EEZ instead of administrative country 
-effort<-read_csv("/rd/gem/private/users/yannickr/effort_histsoc_1950_2017_EEZ.csv")
+# effort<-read_csv("/rd/gem/private/users/yannickr/effort_histsoc_1950_2017_EEZ.csv")
+effort<-read_csv("/rd/gem/private/users/yannickr/effort_histsoc_1950_2017_EEZ_addFAO.csv")
 effort<-effort[,-1]
 head(effort)
 
@@ -93,7 +96,7 @@ head(effort)
 effort<-effort %>% 
   filter(FGroup != "Unknown_EEZ")
 
-# head(effort)
+head(effort)
 
 ```
 
@@ -101,7 +104,8 @@ effort<-effort %>%
 
 ```{r catch, echo = FALSE}
 
-catch<- read_csv("/rd/gem/private/users/yannickr/catch_histsoc_1869_2017_EEZ.csv")
+# catch<- read_csv("/rd/gem/private/users/yannickr/catch_histsoc_1869_2017_EEZ.csv")
+catch<- read_csv("/rd/gem/private/users/yannickr/catch_histsoc_1869_2017_EEZ_addFAO.csv")
 
 # calculate catch as sum of reported and IUU, discards are generally not considered - as per Reg's comment (see 07_cacth_data.rmd) 
 catch$catch_tot<-catch$Reported + catch$IUU
@@ -130,326 +134,15 @@ my_theme<-theme_bw()+
   
 ```
 
-## Extrapolate total effort by LME function
-
-```{r extrapolate, echo = FALSE}
-
-toKeep<-sort(unique(effort$LME))
-
-effort_extrapolate<-function(toKeep, kappa, war_param, war_decision, reference){
-  
-  # # # trial
-  # toKeep=66
-  # kappa=4
-  # war_param = "include"
-  # war_decision = "no-add"
-  # reference = "1945-1955"
-
-  effort_extr<-effort %>% 
-    filter(LME %in% toKeep) %>% 
-    group_by(Year) %>% 
-    summarise(NomActive = sum(NomActive, na.rm = TRUE)) %>% 
-    ungroup()
-
-  maxYearEffort<-max(effort_extr$Year) 
-  
-  catch_all <- catch %>% 
-    filter(LME %in% toKeep) %>% 
-    group_by(Year) %>% 
-    summarise(catch_tot = sum(catch_tot, na.rm = TRUE))
-  
-  ## IF ZERO ----
-  # if(dim(effort_extr)[1] !=0){ 
-  
-  ## IF HISTORICAL catch exist ----
-  if(dim(filter(catch_all, Year <1950))[1] >=10) {  
-    df = catch_all
-    var = "catch_tot" 
-    chechDataUsed = "catch"
-  }else{
-      df = effort_extr
-      var = "NomActive"
-      chechDataUsed = "effort"
-      }
-  
-  # find the pick in data and filter out everything after the pick  
-  maxVar<-max(df[[var]])  
-  maxVar<-filter(df, eval(as.name(var)) == maxVar)
-  toAddBack<-filter(df, Year > maxVar$Year)
-  df<-filter(df, Year <= maxVar$Year)
-    
-  # filter out war years: 1914-18 and 39-45
-  year<-sort(unique(df$Year))
-  if (year[[1]]<=1918){
-    war <- df %>% 
-      filter(Year %in% c(1914:1918, 1939:1945)) 
-    warToRemove<-war$Year
-    }else if (year[[1]]<=1945){
-      war<- df %>% 
-        filter(Year %in% c(1939:1945)) 
-      warToRemove<-war$Year
-    }
-
-  if(year[[1]]<=1918 | year[[1]]<=1945 & war_param == "exclude"){
-    df<-filter(df, !Year %in% warToRemove)
-    }
-    
-  # fit the gam 
-  gam_model<-gam(eval(as.name(var)) ~ s(Year, k=kappa), data=df, family=gaussian(link="log"))
-  df$gam<-round(predict(gam_model,newdata = df,type='response'))
-
-  # # check the gam
-  # ylim = c(min(df$gam), max(df$gam))
-  # plot(df$Year,df[[var]],  ylim=ylim)
-  # par(new=T)
-  # plot(df$Year,df$gam,col="red",type='l', ylim=ylim)
-
-  # predict backwards
-  newd <- data.frame(Year = seq(1861, maxVar$Year))
-  newd$pred <- predict.gam(gam_model,newd,type='response') 
-  newd$pred <- ifelse(newd$pred<=0, 0, newd$pred)
-  
-  # all data
-  df<-df %>%
-    full_join(newd, by = "Year") %>% 
-    dplyr::select(-gam)
-    
-  if(var == "catch_tot"){
-    
-    # 1. calculate rate of change
-    
-    if(reference == "1950"){
-      ref<-df %>% 
-        filter(Year == 1950)
-      ref<-as.numeric(ref$pred)
-    }else{
-      # 1B. calculate rate of change based on mean 1945-1955 years 
-      ref<-df %>% 
-        filter(Year >= 1945, Year <= 1955)
-      ref<-as.numeric(mean(ref$pred, na.rm = TRUE))
-    }
-    
-    # re-add war years for calculation of effort (if these were available). Add them to pred, because pred <1950 is what you are basing your calculation of effort on.
-    if(war_param == "exclude" & war_decision == "re-add"){
-      
-    if (year[[1]]<=1914 | year[[1]]<=1939){
-      df<-df %>% 
-        full_join(war %>% rename(var_war = as.name(var)), by = "Year") %>% 
-        mutate(pred = case_when(!is.na(var_war) ~ var_war,
-                                is.na(var_war) ~ pred)) %>% 
-        select(-var_war)
-    }
-    }
-      
-    rate_of_change<-df %>% 
-      arrange(Year) %>% 
-      mutate(pred = as.numeric(pred)) %>% 
-      mutate(rate = 100 * (pred - ref)/ref) %>% 
-      mutate(Trial_back = ref + (rate/100)*ref) # only to check  
-  
-    # check 
-    # filter(rate_of_change, Year >= 1950, Year <= 1960)
-
-    # 2. extend effort back using rate of change in catch 
-    
-    if(reference == "1950"){
-      ref<-effort_extr %>% 
-        filter(Year == 1950)
-      ref<-as.numeric(ref$NomActive)
-    }else{
-      # 2B. extend effort back using rate of change in catch using decadal mean 
-      ref<-effort_extr %>% 
-        filter(Year >= 1945, Year <=1955)
-      ref<-as.numeric(mean(ref$NomActive, na.rm = TRUE))
-    }
-  
-    effort_reconstruct<-effort_extr %>% 
-      full_join(rate_of_change, by = "Year") %>% 
-      mutate(NomActive_catch_based = case_when(Year >= 1950 ~ NomActive,
-                                               Year < 1950 ~ ref + (rate/100)*ref))
-    
-    # # check
-    # ggplot(data = effort_reconstruct, aes(x = Year, y = NomActive_catch_based)) +
-    #   geom_point()
-    # ggplot(data = effort_reconstruct, aes(x = Year, y = pred)) +
-    #   geom_point()
-
-    # build effort_all
-    effort_all<-effort_reconstruct %>% 
-      dplyr::select(Year, NomActive_catch_based) %>% 
-      rename(NomActive = NomActive_catch_based) 
-    
-    # consider only recent years that are in effort and not in catch 
-    effort_all<-effort_all %>% 
-      filter(Year <= maxYearEffort)
-    
-    }else{ # END var = cacth_tot; beginning of var = NomActive 
-      
-      # build effort based on gam on effort. 
-      df<-df %>% 
-        mutate(NomActive = ifelse(Year < 1950, pred, NomActive)) 
-      
-      } # end difference between var 
-        
-    # FINAL STEPS ----
-    
-    # 1. add missing data 
-    
-    # add back war time in raw catches - only if you had excluded them above
-    # WARNING - CHECK THIS 
-    if(war_param == "exclude"){
-  
-    if (year[[1]]<=1918 | year[[1]]<=1945){
-      df<-df %>% 
-      full_join(war %>% rename(var_war = as.name(var)), by = "Year")
-    
-      if(var == "catch_tot"){
-        df<-df %>% 
-          mutate(catch_tot = case_when(!is.na(var_war) ~ var_war,
-                                       is.na(var_war) ~ eval(as.name(var)))) %>% 
-          select(-var_war)
-      }
-      # }else{ 
-      #   # is this needed? was years are only excluded on catches, not effort. 
-      #   df<-df %>% 
-      #     mutate(NomActive = case_when(!is.na(var_war) ~ var_war,
-      #                                  is.na(var_war) ~ eval(as.name(var)))) %>% 
-      #     select(-var_war)
-      #   
-      # }
-    }
-    }
-    
-    # add back data after pick in both catches and effort
-    if (dim(toAddBack)[1]!=0){
-      df<-df %>% 
-        full_join(toAddBack) 
-      }
-  
-    # define df as either catch_all or effort_all
-    if(var == "catch_tot"){
-      catch_all2<-df # version 2 otherwise cannot # highlight data that was not used in GAM # as catch_all is overwritten
-    }else{
-      effort_all<-df
-      catch_all2<-catch_all 
-    }
-    
-    # 2. merge and plot 
-    final_df<-effort_all %>% 
-      full_join(catch_all2, by = "Year")
-    
-    # add 1841-1860 at 1861 fixed values
-    trial<-final_df %>% 
-      filter(Year == 1861) 
-  
-    add_df<-data.frame(Year = seq(1841, 1860), NomActive = rep(trial$NomActive, 20))
-  
-    final_df<-final_df %>% 
-      full_join(add_df)
-    
-    # # relative to 1950
-    # # WARNING CHECK THIS - not sure we need it 
-    # ref<-final_df %>% 
-    #   filter(Year == 1950)
-    # 
-    # final_relative<-final_df %>% 
-    #   mutate(EffRelative = (NomActive-ref$NomActive)/ref$NomActive, 
-    #          PredRelative = (pred-as.numeric(ref$pred))/as.numeric(ref$pred),
-    #          CatchRelative = (catch_tot-ref$catch_tot)/ref$catch_tot) 
-    # 
-    # final_relative<-final_relative %>% 
-    #   dplyr::select(Year, EffRelative:CatchRelative) %>% 
-    #   gather("Type", "Value", -Year)
-
-    # WARNING - check Warning with gather, use pivot_longer instead
-    final_df<-final_df %>% 
-      pivot_longer(cols = -Year, names_to = "Type", values_to = "Value") 
- 
-    # final_df<-final_df %>% 
-    #   gather("Type", "Value", -Year) 
-  
-    # grouping for plot below - these are the titles of the two stacked plots 
-    if(var == "catch_tot"){
-      final_df<-final_df %>% 
-        mutate(group = ifelse(Type == "NomActive", "Effort (nominal, DkW)", "Catch (tonnes)") )
-      
-    }else(
-      final_df<-final_df %>% 
-        mutate(group = ifelse(Type == "catch_tot", "Catch (tonnes)", "Effort (nominal, DkW)") )
-    )
-    
-    # highlight data that was not used in GAM 
-    if(dim(filter(catch_all, Year <1950))[1] >=10 & war_param == "exclude" & war_decision != "re-add") { 
-      final_df <-final_df %>% 
-        mutate(Considered = ifelse(Year %in% c(1914:1918, 1939:1945), "No", "Yes"))
-    }else{ 
-      final_df <-final_df %>% 
-        mutate(Considered = "Yes")
-    }
-    
-    if(dim(toAddBack)[1]!=0){
-      final_df <-final_df %>% 
-        mutate(Considered = ifelse(Year > maxVar$Year, "No", Considered))
-    }
-    
-    final_df_plot<-final_df %>% 
-      rename(Data = Type) %>% 
-      mutate(Data = ifelse(Data == "pred", "GAM predictions", "Reconstructed values"),
-             Considered = as.factor(Considered))
-    
-    # make "yes" always a dot and never a square 
-    scale_fill_chris <- function(...){
-    ggplot2:::manual_scale(
-        'shape', 
-        values = setNames(c(16,15), c("Yes", "No")), 
-        ...
-    )
-    }
-    
-    data_for_plot_for_FAOreport = final_df_plot # Added to play with plots for FAO report
-    
-    # create data for annotation 
-    yMax = max(filter(final_df, Type == "NomActive")$Value, na.rm = TRUE)
-    # ann_text <- data.frame(Year = c(1841+10,1861+15,1961+15), Value = rep(yMax,3), lab = c("Spin-up","Transition","Experiment"), group = rep("Effort (nominal, DkW)", 3), Data = rep("Reconstructed values", 3), Considered = rep("Yes", 3))
-    
-    ann_text <- data.frame(Year = c(1841+10,1961+15), Value = rep(yMax,2), lab = c("Transition","Experiment"), group = rep("Effort (nominal, DkW)", 2), Data = rep("Reconstructed values", 2), Considered = rep("Yes", 2))
-    
-    plot<-ggplot(data = final_df_plot, aes(x = Year, y = Value, group = Data, color = Data, shape=Considered)) +
-      ggtitle(paste("LME", toKeep, sep = " "))+
-      facet_wrap(~group, scales = "free", nrow = 2)+
-      annotate("rect",xmin=1841, xmax=1960, ymin=0, ymax=Inf, fill = "#b2e2e2", alpha = 0.4)+ # spin-up edf8fb
-      # annotate("rect",xmin=1861, xmax=1960, ymin=0, ymax=Inf, fill = "#66c2a4", alpha = 0.4)+ # transition b2e2e2
-      annotate("rect",xmin=1961, xmax=2010, ymin=0, ymax=Inf, fill = "#238b45", alpha = 0.4)+ # projection 66c2a4
-      # annotate("rect",xmin=2010, xmax=2017, ymin=0, ymax=Inf, fill = "#238b45", alpha = 0.4)+ # validation 238b45
-      geom_text(data = ann_text,label = ann_text$lab, color = "Black", size = 2)+
-      geom_point(data = filter(final_df_plot, Data == "Reconstructed values"),size=1)+
-      geom_line(data = filter(final_df_plot, Data == "GAM predictions")) +
-      scale_color_manual(values = c("blue", "black"), drop = FALSE)+
-      scale_fill_chris()+
-      my_theme
-    
-    if(var == "catch_tot"){ # different reference year are only relevent when effort reconstruction is based on catches  
-      if(reference == "1950"){
-        plot<-plot+
-          geom_vline(xintercept=1950, linetype="dashed", color = "red", size=0.5)
-      }else{
-        plot<-plot+
-          geom_vline(xintercept=1945, linetype="dashed", color = "red", size=0.5)+
-          geom_vline(xintercept=1955, linetype="dashed", color = "red", size=0.5)
-      }}
-    
-    # save outputs 
-    return(list(reconstructed_effort_LME = final_df, plot_reconstructed_effort_LME = plot, chechDataUsed = chechDataUsed, data_for_plot_for_FAOreport = data_for_plot_for_FAOreport)) 
-    
-  # } # END if data exist 
-  
-} 
-
-```
-
 ## Extrapolate total effort by LME loop
 
 ```{r extrapolate loop, echo = FALSE, fig.width=10, fig.height=7}
+
+toKeep<-sort(unique(effort$LME))
+
+source("Helper_functions_fishingEffort.R")
+
+### NOTE - these analyses were done at the LME level - i.e. when LME0 was a unique area not divided into FAO regions.  
 
 # # first loop ----
 # # this is with war and ref at 1950 (this only applies to catches)
@@ -608,15 +301,30 @@ effort_extrapolate<-function(toKeep, kappa, war_param, war_decision, reference){
 # fix the k argument in GAM (based on war_param = "include" and reference = 1950)
 toKeep<-sort(unique(effort$LME))
 
+#### LME_FAO approach instead - now need a different code for LME that considers LME and FAO (and maybe LME and EEZ next?)
+
+# 1 rename LME to LME_original 
+# create an LME_1 and FAO_1 where LME == 0 new code under LME column. 
+# might need to tune kappa values for FAO regions in LME0 and will need to check plot at FAO region level as they will be sum of LME and FAO.  
+
+effort<-effort %>% 
+  mutate(LME_FAO = ifelse(LME == 0, paste0("FAO_", fao_area), paste0("LME_", LME)))
+
+# new toKeep
+toKeep<-sort(unique(effort2$LME_FAO))
+
 df_kappa = 6 
 # with kappa = 3 bumps in effort disappear and we force the perfect logarithmic shape on the catch/effort data, but GAM in most cases does not fit the data particularly well (as does not follow bumps ...)
 
 if(df_kappa ==6){ # better capture trends 
   
+  
+  ## WARNING need to readjust according to LME name instead of seq number 
+  
   # but avoid an increase in effort from 1950 to 1841: 
-  kappa_values<-data.frame(lme = toKeep, kappa = 6)  
-  kappa_values[c(5,13,19,56,57,61)+1, 2]<-5
-  kappa_values[c(8)+1, 2]<-4 
+  kappa_values<-data.frame(lme = toKeep, kappa = 6) 
+  kappa_values[c(5,13,19,56,57,61)+1, 2]<-5 # LMEs 5, 13, 19, 56, 57, 61
+  kappa_values[c(8)+1, 2]<-4 # LMEs 8
 
   # correct trends - Jerome comments
   # LME 40 not capturing slow increase in effort and resulting in high effort between 1841 and 1950, try playing with the smoothing parameter.
@@ -651,6 +359,7 @@ if(df_kappa ==6){ # better capture trends
   
 }else if (df_kappa == 3){ # assumes a "perfect" logistic 
   
+  ### WARNING - this option has not been updated given the new FAO_LME classification as not in use
   kappa_values<-data.frame(lme = toKeep, kappa = 3)
   kappa_values[c(3,6,9,24,31,43,44,57,61)+1, 2]<-4
   kappa_values[c(62,63)+1, 2]<-5 # no solution to 64 - see below for adjustments
